test/fail/missing-semi.rnp
1
2
---
SyntaxError: Unexpected token
fail/missing-semi.rnp:2:1
2
^
